# basalt

./: .rust-analyzer.toml  Cargo.toml  LICENSE  README.md  basalt.example.toml  tokens.example.txt
.github/workflows/: ci.yml  release.yml
.hermes/plans/: 2026-04-12_165800-basalt-kv-store.md
benches/: basalt_bench.rs  resp_bench.rs
docs/: README.md  api-reference.md  architecture.md  auth.md  configuration.md  deployment.md  development.md  llm.md  memory-types.md  performance.md  persistence.md  replication.md  triggers.md  vector-search.md
docs/plans/: 2026-04-13-automatic-failover.md  2026-04-13-cross-agent-memory-sharing.md  2026-04-13-resp-session-refactor.md  2026-04-14-llm-inference-service.md  2026-04-14-memory-consolidation.md  2026-04-14-relevance-decay.md  2026-04-14-summarization-triggers.md
src/: config.rs  lib.rs  main.rs  metrics.rs  time.rs
src/http/: auth.rs  mod.rs  models.rs  rate_limit.rs  ready.rs  server.rs
src/llm/: anthropic.rs  client.rs  error.rs  mod.rs  openai.rs  provider.rs
src/replication/: mod.rs  primary.rs  replica.rs  wal.rs
src/resp/: commands.rs  error.rs  mod.rs  parser.rs  server.rs  session.rs  tls.rs  uring_server.rs
src/store/: consolidation.rs  decay.rs  engine.rs  memory_type.rs  mod.rs  persistence.rs  shard.rs  share.rs  trigger.rs  vector.rs
tests/: concurrency_test.rs  engine_test.rs  http_integration_test.rs  io_uring_test.rs  llm_test.rs  replication_e2e_test.rs  replication_test.rs  resp_integration_test.rs  resp_uring_integration_test.rs  session_test.rs  snapshot_test.rs  tls_integration_test.rs  vector_search_integration_test.rs  vector_test.rs
tests/common/: mod.rs
