[package]
name = "basalt"
version = "0.1.0"
edition = "2024"
description = "Ultra-high performance KV store for AI memory"
license = "MIT"

[features]
default = []
io-uring = ["dep:io-uring", "dep:slab", "dep:libc"]
metrics = ["dep:prometheus"]
tls-rustls = ["dep:tokio-rustls", "dep:rustls-pemfile"]
tls-native-tls = ["dep:tokio-native-tls", "dep:native-tls"]

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.9"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
papaya = "0.2"
ahash = "0.8"
bytes = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memchr = "2"
toml = "0.8"
lz4_flex = "0.11"
crc32fast = "1"
instant-distance = "0.6"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
io-uring = { version = "0.7", optional = true }
slab = { version = "0.4", optional = true }
libc = { version = "0.2", optional = true }
prometheus = { version = "0.13", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
tempfile = "3"
rcgen = { version = "0.13", features = ["crypto"] }

[[bench]]
name = "basalt_bench"
harness = false

[[bench]]
name = "resp_bench"
harness = false
